samples/_failures_safe/1761535640_0b444f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_932f3c12.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_932f3c12.c:156:16: error: missing terminating " character
  156 |         printf("Token %zu: %s
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_932f3c12.c:156:9: error: expected expression at end of input
  156 |         printf("Token %zu: %s
      |         ^~~~~~
./samples/SAFE/__tmp_932f3c12.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_932f3c12.c:156:9: error: expected declaration or statement at end of input
